# mmcv

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .log-246056.txt  .log-3917757.txt  .mdformat.toml  .owners.yml  .pre-commit-config-zh-cn.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  =2.4.0  CHANGES_SUMMARY.md  CITATION.cff  CONTRIBUITING-zh-cn.md  CONTRIBUTING-zh-CN.md  CONTRIBUTING.md  CONTRIBUTING_zh-CN.md  Dockerfile  Jenkinsfile  LICENSE  LICENSES.md  MANIFEST.in  MMCompetition.md  MMcompetition_file.txt  MUSA_install.sh  README.md  README.rst  README_PYTORCH_ONLY.md  README_ja-JP.md  README_zh-CN.md  TERMINOLOGY.md  addfile.txt  build.sh  build_musa.sh  carafe_log  conver.py  (+30 more)
.circleci/: config.yml  test.yml
.circleci/docker/: Dockerfile
.dev_scripts/: check_installation.py  visualize_lr.py
.devcontainer/: Dockerfile  devcontainer.json  post_create_script.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature_request.yml  3-documentation.yml  config.yml  general_questions.md  unexpected_report.md
.github/workflows/: build.yml  build_macos_wheel.yml  build_pat.yml  cancel.yml  lint.yml  merge_stage_test.yml  pr_stage_test.yml  publish-to-pypi.yml  publish.yml  pytest.yml  pythonpackage.yml  ruff.yml
cache/kernel_cache/: op_cache.ini
docker/: README.md
docker/dev/: Dockerfile
docker/release/: Dockerfile
docs/: api.rst  build.md  cnn.md  community.rst  compatibility.md  conf.py  config.md  data_process.md  deployment.rst  faq.md  faq.rst  get_started.rst  getting-started.rst  image.md  index.rst  intro.md  io.md  mmcv-windows.md  model_zoo.md  onnx.md  onnxruntime_custom_ops.md  onnxruntime_op.md  ops.md  registry.md  requirements.txt  runner.md  tensorrt_custom_ops.md  tensorrt_ops.md  tensorrt_plugin.md  trouble_shooting.md  tutorials.rst  understand-mmcv.rst  understand-the-mmcv.rst  understand_mmcv.rst  utils.md  video.md  visualization.md
docs/community/: contributing.md  pr.md
docs/deployment/: mmcv_ops_definition.md  onnx.md  onnxruntime_custom_ops.md  onnxruntime_op.md  tensorrt_custom_ops.md  tensorrt_plugin.md
docs_zh_CN/: _static  api.rst  build.md  cnn.md  community.rst  compatibility.md  conf.py  deployment.rst  faq.md  get_started.rst  image.md  index.rst  io.md  onnx.md  onnxruntime_custom_ops.md  onnxruntime_op.md  ops.md  registry.md  runner.md  tensorrt_custom_ops.md  tensorrt_plugin.md  trouble_shooting.md  understand_mmcv.rst  utils.md  video.md  visualization.md
examples/: config_cifar10.py  dist_train_cifar10.sh  resnet_cifar.py  train.py  train.sh  train_cifar10.py
kernel_meta_temp_02dab64e87f9536a39b2d57f62e6ffae5f08d3f756c8f08a8b6bfc1c3db33353/: task_pid_18483_23411.txt  task_pid_189775_192819.txt
mmcv/: LICENSE  MANIFEST.in  __init__.py  __main__.py  commit_id.py  io.py  log  opencv_info.py  version.py
mmcv/ops/csrc/diopi_impl/torch/: CMakeLists.txt  conform_test.cpp  functions.cpp  helper.hpp  readme.md  roi_align_kernel.cu  vision_kernel.h
mmcv/ops/csrc/diopi_impl/torch/common/: chamfer_distance_cuda_kernel.cuh  common_aten_helper.hpp  common_cuda_helper.hpp  nms_cuda_kernel.cuh
mmcv/ops/csrc/diopi_impl/torch/cuda/: chamfer_distance_cuda_diopi.cu  cuda_kernel.h  nms_cuda.cu  nms_cuda_diopi.cu
requirements/: build.txt  cv2-graphics.txt  cv2-headless.txt  docs.txt  optional.txt  runtime.txt  test.txt
scripts/: verify_installation.py
tests/: pytest_util.py  test_arraymisc.py  test_config.py  test_datapipeline.py  test_env.py  test_fileclient.py  test_fileio.py  test_flops_counter.py  test_hooks.py  test_image.py  test_io.py  test_load_checkpoint.py  test_load_model_zoo.py  test_logging.py  test_misc.py  test_optflow.py  test_optimizer.py  test_parallel.py  test_path.py  test_progressbar.py  test_registry.py  test_runner.py  test_tensorrt_preprocess.py  test_timer.py  test_version_utils.py  test_video.py  test_visualization.py
(+2036 files in other folders)
