
[project]
name = "onedl-mmcv"
description = "OpenMMLab Computer Vision Foundation"
authors = [
    { name = "VBTI Contributors", email = "dev@vbti.nl" }
]
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["computer vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]
dependencies = [
    "addict",
    "onedl-mmengine>=0.3.0",
    "numpy<2",
    "packaging",
    "Pillow",
    "pyyaml",
    "regex; sys_platform == 'win32'",
    "yapf"
]
version = "2.3.0-rc0"

[dependency-groups]
docs = [
    "docutils",
    "markdown>=3.4.0",
    "myst-parser",
    "opencv-python",
    "pytorch_sphinx_theme @ git+https://github.com/VBTI-development/onedl_sphinx_theme.git@pt",
    "sphinx",
    "sphinx-copybutton",
    "sphinx_markdown_tables>=0.0.16",
    "sphinxcontrib-jquery",
    "torch",
    "urllib3"
]
test = [
    "coverage",
    "lmdb",
    "onnx",
    "onnxoptimizer",
    "onnxruntime",
    "opencv-python",
    "pytest",
    "PyTurboJPEG",
    "scipy",
    "tifffile"
]
optional = [
    "ninja",
    "psutil"
]
build = [
    "setuptools",
]

[project.optional-dependencies]
torch = [ "torch<2.6" ]

[project.urls]
Homepage = "https://onedl.ai"
Repository = "https://github.com/VBTI-development/mmcv"
Documentation = "https://mmcv.readthedocs.io/en/latest/"

[build-system]
requires = [
    "setuptools>=78",
    "wheel",
    "packaging>=24.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.yapf]
based_on_style = "pep8"
blank_line_before_nested_class_or_def = true
split_before_expression_after_opening_paren = true

[tool.isort]
line_length = 79
multi_line_output = 0
extra_standard_library = "pkg_resources,setuptools,logging,os,warnings,abc"
known_first_party = "mmcv"
known_third_party = "addict,cv2,matplotlib,numpy,onnx,packaging,pytest,pytorch_sphinx_theme,scipy,sphinx,torch,torchvision,yaml,yapf"
no_lines_before = "STDLIB,LOCALFOLDER"
default_section = "THIRDPARTY" # codespell:ignore

[tool.codespell]
quiet-level = 3
ignore-words-list = "inout,hist,ba,ro,inh"

[tool.uv]
no-build-isolation-package = ["torch", "onedl-mmcv"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
